[package]
name = "catalogue"
version = "0.1.0"
edition = "2021"
authors = [ "Jamie Murphy <hello@itsjamie.dev>" ]

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.9"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.5"

[dependencies.he]
package = "libhelium"
git = "https://github.com/tau-OS/libhelium-rs"