scalable_dir = join_paths('hicolor', 'scalable', 'apps')
install_data(
  scalable_dir / ('@0@.svg').format(application_id),
  install_dir: catalogue_datadir / 'icons' / scalable_dir
)

symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')
install_data(
  symbolic_dir / 'co.tauos.Catalogue-symbolic.svg',
  install_dir: catalogue_datadir / 'icons' / symbolic_dir
)
